--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HomeScan</title>
 </head>
 <body>
-    <h1>Title Fuck</h1>
+    <header>
+        <div>
+
+        </div>
+    </header>
 </body>
 </html>
