--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/grid.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeScan</title>
+    <title>Home-Scan</title>
 </head>
 <body>
     <header>
-        <div>
-
+        <div class="hero-text">
+            <h1>Începe transformarea virtuala</h1>
+            <a href=# class="btn btn-full btn-start">Alege un plan</a>
+            <a href=# class="btn btn-ghost btn-about">Afla mai multe</a>
         </div>
     </header>
 </body>
