--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,126 @@
 </head>
 <body>
     <header>
+        <nav>
+            <div class="row row-info">
+                <img src="img/logo/Logo_white.png" class="logo logo-white" alt="HomeScan Logo">
+                <ul class="main-nav">
+                    <li><a href="#">Despre</a></li>
+                    <li><a href="#">Galerie</a></li>
+                    <li><a href="#">Prețuri</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="hero-text">
-            <h1>Începe transformarea virtuala</h1>
+            <h1>Începe transformarea virtuală</h1>
             <a href=# class="btn btn-full btn-start">Alege un plan</a>
-            <a href=# class="btn btn-ghost btn-about">Afla mai multe</a>
+            <a href=# class="btn btn-ghost btn-about">Află mai multe</a>
         </div>
     </header>
+    <section class="slide-show">
+
+        <div class="row">
+            <h2>Galerie</h2>
+        </div>
+
+        <div class="carousel">
+            <button class="carousel__button carousel__button--left">
+                <img src="img/Slide/arrow-left.svg" alt="">
+            </button>
+
+            <div class="carousel__track-container">
+                <ul class="carousel__track">
+                   <li class="carousel__slide">
+                       <img src="img/Slide/MP_RealEstate-dollhouse.jpg" alt="">
+                    </li>
+                   <li class="carousel__slide">
+                       <img src="img/Slide/MP_RealEstate-wireframe.jpg" alt="">
+                    </li>
+                   <li class="carousel__slide">
+                       <img src="img/Slide/MP_Hospitality-dollhouse.jpg" alt="">
+                    </li>
+                    <li class="carousel__slide">
+                        <img src="img/Slide/MP_Hospitality-wireframe.jpg" alt="">
+                     </li>
+                </ul>
+            </div>
+
+            <button class="carousel__button carousel__button--right">
+                <img src="img/Slide/arrow-right.svg" alt="">
+            </button>
+
+            <div class="carousel__nav">
+                <button class="carousel__indicator current-slide"></button>
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator"></button>
+            </div>
+
+         </div>
+
+    </section>
+    <section class="info">
+        <div class="row">
+            <h2>Despre &mdash; Servicii</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <h3>Loream Ipsum</h3>
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                    College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
+                    and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem 
+                    Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+                    Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during 
+                    the Renaissance. 
+                </p>
+            </div>
+            <div class="col span-1-of-2">
+                <h3>Loream Ipsum</h3>
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                    College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
+                    and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem 
+                    Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+                    Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during 
+                    the Renaissance. 
+                </p>
+            </div>
+            
+        </div>
+        <div class="row row-info">
+            <div class="col span-1-of-2">
+                <h3>Loream Ipsum</h3>
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                    College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
+                    and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem 
+                    Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+                    Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during 
+                    the Renaissance. 
+                </p>
+            </div>
+            <div class="col span-1-of-2">
+                <h3>Loream Ipsum</h3>
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                    College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage,
+                    and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem 
+                    Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+                    Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during 
+                    the Renaissance. 
+                </p>
+            </div>
+            
+        </div>
+    </section>
+
+<!--<script src="js/bundle.js"></script>-->
+
 </body>
 </html>
