--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 
             <div class="carousel__track-container">
                 <ul class="carousel__track">
-                   <li class="carousel__slide">
+                   <li class="carousel__slide current-slide">
                        <img src="img/Slide/MP_RealEstate-dollhouse.jpg" alt="">
                     </li>
                    <li class="carousel__slide">
