--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                    <li class="carousel__slide">
                        <img src="img/Slide/MP_Hospitality-dollhouse.jpg" alt="">
                     </li>
-                    <li class="carousel__slide">
+                    <li class="carousel__slide last-slide">
                         <img src="img/Slide/MP_Hospitality-wireframe.jpg" alt="">
                      </li>
                 </ul>
@@ -66,7 +66,7 @@
                 <button class="carousel__indicator current-slide"></button>
                 <button class="carousel__indicator"></button>
                 <button class="carousel__indicator"></button>
-                <button class="carousel__indicator"></button>
+                <button class="carousel__indicator last-button"></button>
             </div>
 
          </div>
