--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/grid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
 
@@ -30,7 +31,7 @@
             <a href=# class="btn btn-ghost btn-about">Află mai multe</a>
         </div>
     </header>
-    <section class="slide-show">
+    <section class="section-slide-show">
 
         <div class="row">
             <h2>Galerie</h2>
@@ -72,7 +73,8 @@
          </div>
 
     </section>
-    <section class="info">
+
+    <section class="section-info">
         <div class="row">
             <h2>Despre &mdash; Servicii</h2>
         </div>
@@ -130,6 +132,59 @@
             </div>
             
         </div>
+    </section>
+
+    <section class="section-contact">
+        
+        <div class="row">
+            <h2>contact</h2>
+        </div>
+
+        <div class="row">
+            <form action="https://formspree.io/xqkddean" method="POST" class="contact-form">
+                <div class="row">
+                    <div class=" label col span-1-of-3">
+                        <label for="name">Nume*</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="text" name="name" id="name" placeholder="Numr Prenume" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class=" label col span-1-of-3">
+                        <label for="nr-tel">nr.Tel</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="text" name="nr-tel" id="nr-tel" placeholder="07 . . - . . . - . . ." >
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="label col span-1-of-3">
+                        <label for="email">Email*</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="email" name="email" id="email" placeholder="Adresa dvs de Email" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="label col span-1-of-3">
+                        <label>Mesaj</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <textarea name="message" placeholder="Scrie-ne un mesaj"></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="label col span-1-of-3">
+                        <label>&nbsp;</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                       <button type="submit" class="submit">Trimite acum</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
     </section>
 
 <!--<script src="js/bundle.js"></script>-->
