--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/grid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet"> 
 
@@ -15,8 +14,9 @@
 <body>
     <header>
         <nav>
-            <div class="row row-info">
-                <img src="img/logo/Logo_white.png" class="logo logo-white" alt="HomeScan Logo">
+            <div class="row">
+                <img src="img/logo/Logo_white.png" class="logo-white" alt="HomeScan Logo">
+                <img src="img/logo/Logo_black.png" class="logo-black" alt="HomeScan Logo">
                 <ul class="main-nav">
                     <li><a href="#">Despre</a></li>
                     <li><a href="#">Galerie</a></li>
@@ -31,7 +31,7 @@
             <a href=# class="btn btn-ghost btn-about">Află mai multe</a>
         </div>
     </header>
-    <section class="section-slide-show">
+    <section class="section-slider js--section-slider">
 
         <div class="row">
             <h2>Galerie</h2>
@@ -187,6 +187,8 @@
 
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
 <!--<script src="js/bundle.js"></script>-->
 
 </body>
