--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
                 <img src="img/logo/Logo_white.png" class="logo-white" alt="HomeScan Logo">
                 <img src="img/logo/Logo_black.png" class="logo-black" alt="HomeScan Logo">
                 <ul class="main-nav">
-                    <li><a href="#">Despre</a></li>
-                    <li><a href="#">Galerie</a></li>
+                    <li><a href="#" class="js--scroll-to-info">Despre</a></li>
+                    <li><a href="#" class="js--scroll-to-slider">Galerie</a></li>
                     <li><a href="#">Prețuri</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" class="js--scroll-to-contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -74,7 +74,7 @@
 
     </section>
 
-    <section class="section-info">
+    <section class="section-info js--section-info">
         <div class="row">
             <h2>Despre &mdash; Servicii</h2>
         </div>
@@ -134,7 +134,7 @@
         </div>
     </section>
 
-    <section class="section-contact">
+    <section class="section-contact js--section-contact">
         
         <div class="row">
             <h2>contact</h2>
