--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,15 @@
         </nav>
         <div class="hero-text">
             <h1>Începe transformarea virtuală</h1>
+            <h1>
+                <span class="typer" id="main" data-words="a casei de vacanta,a imobilului,a restaurantului,a afaceri tale" data-delay="100" data-deleteDelay="1000" data-colors="#f1bc0f"></span>
+                <span class="cursor" data-owner="main"></span>
+            </h1>
             <a href=# class="btn btn-full btn-start">Alege un plan</a>
             <a href=# class="btn btn-ghost btn-about">Află mai multe</a>
         </div>
     </header>
+
     <section class="section-slider js--section-slider">
 
         <div class="row">
@@ -187,7 +192,7 @@
 
     </section>
     
-    
+    <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
 <!--<script src="js/bundle.js"></script>-->
